--- a/src/zimlet/com_zimbra_about/templates/About.template
+++ b/src/zimlet/com_zimbra_about/templates/About.template
@@ -1,6 +1,6 @@
 <template id='DialogView'>
 	<div class='AboutZimlet_background'>
-	<table><tr><td align=center><div class='ImgAppBanner'></div></td></tr>
+	<table><tr><td align=center><div class='ImgAppBanner' style='width:220px'></div></td></tr>
 	<tr><td><input readonly='readonly' type=text value='${version}' class='AboutZimlet_input'></input></td></tr>
 	<tr><td><textarea type=text spellcheck='false' readonly='readonly' class='AboutZimlet_textarea'>${userAgent}</textarea></td></tr>
 	<tr/>
