Bug: 59760 Zimlet to embed youtube video Add functionality to url zimlet to show youtube links embedded in mail message
http://bugzilla.zimbra.com/show_bug.cgi?id=59760

Copied from Perforce
 Change: 312344

--- a/src/zimlet/com_zimbra_url/com_zimbra_url.properties
+++ b/src/zimlet/com_zimbra_url/com_zimbra_url.properties
@@ -16,3 +16,6 @@
 # NOTE: This one is named differently due to conflict w/ previous key
 zimletLabel = URL Links
 description = Highlight Web URLs for linking in email messages.
+youTubeTitle = Videos from this email
+youTubeTitleMax = Showing {0} videos from this email
+youTubeClickToToggle = Click to play or hide video
