bug:49715 URL Zimlet should identify the ics url and send a new folder request to add a new calendar
http://bugzilla.zimbra.com/show_bug.cgi?id=49715

Copied from Perforce
 Change: 315994

--- a/src/zimlet/com_zimbra_url/com_zimbra_url.properties
+++ b/src/zimlet/com_zimbra_url/com_zimbra_url.properties
@@ -19,3 +19,5 @@ description = Highlight Web URLs for linking in email messages.
 youTubeTitle = Videos from this email
 youTubeTitleMax = Showing {0} videos from this email
 youTubeClickToToggle = Click to play or hide video
+goToUrl = Go to URL
+newCalendar = Create New Calendar
