--- a/src/zimlet/com_zimbra_webex/com_zimbra_webex.properties
+++ b/src/zimlet/com_zimbra_webex/com_zimbra_webex.properties
@@ -1,7 +1,7 @@
 #
 # ***** BEGIN LICENSE BLOCK *****
-# Zimbra Collaboration Suite Web Client
-# Copyright (C) 2005, 2006, 2007, 2008, 2009, 2010 Zimbra, Inc.
+# Zimbra Collaboration Suite Zimlets
+# Copyright (C) 2010 Zimbra, Inc.
 # 
 # The contents of this file are subject to the Zimbra Public License
 # Version 1.3 ("License"); you may not use this file except in
@@ -10,11 +10,12 @@
 # 
 # Software distributed under the License is distributed on an "AS IS"
 # basis, WITHOUT WARRANTY OF ANY KIND, either express or implied.
-#
 # ***** END LICENSE BLOCK *****
 
 label = WebEx
 description = Easily schedule, start or join WebEx meetings.
+WebExZimlet_insertWebExDetails = Insert WebEx details
+WebExZimlet_insertWebExDetailsAndSaveAppointment = Insert WebEx details and save appointment
 
 #
 # Zimlet messages.
@@ -147,3 +148,5 @@ WebExZimlet_userPwdCIdRequired= WebEx Username, Password & Company Id are requir
 WebExZimlet_meetingWasDeleted=WebEx meeting was deleted
 WebExZimlet_entireSeriesWillBeDeleted=WebEx Appointment found.<br/> For a recurring appointment, entire series will be deleted on WebEx server.<br/> Do you want to continue?
 WebExZimlet_modifyApptAvoidDuplicateInfoWarning=Modifying WebEx Appointment.<br/> Please make sure to remove older WebEx data from body, subject and location fields in order to avoid inserting multiple WebEx information. <br/>Do you want to continue?
+WebExZimlet_teleconferenceDetails = Teleconference Details:
+WebExZimlet_webExDetails = WebEx  Details:
