bug:60055,60517,61310 - 61310 WebEx Zimlet: Japanese subject string got garbled     - Reverted to use ProxyServlet of Zimbra Server as JSP doesnt know how proxy-info (like vmware's proxy) - 60055 [WebEx Zimlet sends two email to all attendees 60517 & [Webex Zimlet should send organizer special info for starting meeting]  - WebEx doesnt direcrtly support ignoring emails to attendees (except host), but with we can achieve this by combination of:    CreateMeeting w/o attendees and with send-email option + auto-accept-option, and then use RegisterAttendees w/o emails option
http://bugzilla.zimbra.com/show_bug.cgi?id=60055
http://bugzilla.zimbra.com/show_bug.cgi?id=60517
http://bugzilla.zimbra.com/show_bug.cgi?id=61310

Copied from Perforce
 Change: 319491

--- a/src/zimlet/com_zimbra_webex/com_zimbra_webex.properties
+++ b/src/zimlet/com_zimbra_webex/com_zimbra_webex.properties
@@ -141,6 +141,7 @@ WebExZimlet_unableToCreateOrModifyMeeting=Unable to create/modify WebEx meeting
 WebExZimlet_invalidAlternateHost=Invalid alternate Host.<br/>Alternate Hosts are used to to allow other hosts to schedule meetings on your behalf. To use this feature, this must be configured in your WebEx Profile. <br/><br/>To grant permission for an alternate host:<br/>1. Login to your WebEx account.<br/>2. Browse to Setup > My Profile > Session Options > Scheduling permission.<br/>3. Enter Alternate Hosts.<br/>4. Save your profile.
 WebExZimlet_setupAlternateHost=Alternate Hosts are used to to allow other hosts to schedule meetings on your behalf. To use this feature, this must be configured in your WebEx Profile. <br/><br/>To grant permission for an alternate host:<br/>1. Login to your WebEx account.<br/>2. Go to Setup > My Profile > Session Options > Scheduling permission.<br/>3. Enter Alternate Hosts.<br/>4. Save your profile.
 WebExZimlet_userPwdCIdRequired= WebEx Username, Password & Company Id are required.
+WebExZimlet_couldNotRegisterAttendees = Could not register attendees
 
 #
 # Calendar
