--- a/src/zimlet/com_zimbra_social/com_zimbra_social.properties
+++ b/src/zimlet/com_zimbra_social/com_zimbra_social.properties
@@ -1,13 +1,13 @@
 #
 # ***** BEGIN LICENSE BLOCK *****
-# Zimbra Collaboration Suite Web Client
+# Zimbra Collaboration Suite Zimlets
 # Copyright (C) 2010 Zimbra, Inc.
-#
+# 
 # The contents of this file are subject to the Zimbra Public License
 # Version 1.3 ("License"); you may not use this file except in
 # compliance with the License.  You may obtain a copy of the License at
 # http://www.zimbra.com/license.
-#
+# 
 # Software distributed under the License is distributed on an "AS IS"
 # basis, WITHOUT WARRANTY OF ANY KIND, either express or implied.
 # ***** END LICENSE BLOCK *****
@@ -230,6 +230,7 @@ seeAllComments = See all {0} comments
 
 #socialcast
 couldNotAddCommentToSC =   Could not add Comment to Socialcast
+couldNotAuthenticateSC = Could not authenticate corresponding Socialcast Account. Please delete & re-add it and see if the problem goes away.
 #digg
 diggError = Digg Error: 
 
