bug: 10704 - Factor out core code from ZimbraServer
Moved zclient code from com.zimbra.cs.zclient to
the com.zimbra.client package in a new
ZimbraClient project.  Updated a bunch of build
scripts to use properties and tasks from ant-global.xml.

http://bugzilla.zimbra.com/show_bug.cgi?id=10704

Copied from Perforce
 Change: 322868

--- a/build.xml
+++ b/build.xml
@@ -38,6 +38,9 @@
     <property name="soap.dir" location="../ZimbraSoap"/>
     <property name="soap.classes.dir" location="${soap.dir}/build/classes"/>
 
+    <property name="client.dir" location="../ZimbraClient"/>
+    <property name="client.classes.dir" location="${client.dir}/build/classes"/>
+
 	<property name="webinf.dir" location="WebRoot/WEB-INF" />
 	<property name="server.dir" location="../ZimbraServer" />
 	<property name="server.classes.dir" location="${server.dir}/build/classes" />
