bug: 10704 - Factor out core code from ZimbraServer
Fixed build breakage introduced in change 322482.

http://bugzilla.zimbra.com/show_bug.cgi?id=10704

Copied from Perforce
 Change: 322877

--- a/build.xml
+++ b/build.xml
@@ -80,6 +80,7 @@
 		<pathelement location="${common.classes.dir}" />
 		<pathelement location="${server.classes.dir}" />
 		<pathelement location="${soap.classes.dir}"/> 
+                <pathelement location="${client.classes.dir}"/>
 		<pathelement location="${build.classes.dir}" />
 		<fileset dir="${jars.dir}">
 			<include name="**/*.jar" />
