--- a/src/zimlet/com_zimbra_mailarchive/com_zimbra_mailarchive.properties
+++ b/src/zimlet/com_zimbra_mailarchive/com_zimbra_mailarchive.properties
@@ -1,5 +1,5 @@
 label = Archive
-description = Moves mails to Archive folder in current folder (or, optionally, to Local-account's Archive folder in Zimbra Desktop)
+description = Moves mail(s) to Archive folder in current mailbox (or to Local-account's Archive folder in Zimbra Desktop)
 preferences = Preferences
 archiveToLocalInZD = Archive to Local Account's "Archive" folder in Zimbra Desktop
 preferenceWasSaved = Preference was saved
