bug:62656 Show Alert dialog box to let people know that if they modify the meeting, they will have to recreate WebEx meeting.
http://bugzilla.zimbra.com/show_bug.cgi?id=62656

Copied from Perforce
 Change: 326147

--- a/src/zimlet/com_zimbra_webex/com_zimbra_webex.properties
+++ b/src/zimlet/com_zimbra_webex/com_zimbra_webex.properties
@@ -143,6 +143,7 @@ WebExZimlet_setupAlternateHost=Alternate Hosts are used to to allow other hosts 
 WebExZimlet_userPwdCIdRequired= WebEx Username, Password & Company Id are required.
 WebExZimlet_couldNotRegisterAttendees = Could not register attendees
 cannotContinueInvalidEmails = Cannot continue. Following invalid email(s) found
+modifyAlertNotice = WebEx meeting has been successfully created. <br><br>Please Note:<br> If you modify this meeting (other than its body content), you will have to recreate WebEx meeting
 
 #
 # Calendar
